<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Helmet</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Test</string>
    <string name="title_section3">Scenarios</string>
    <string name="title_section4">System</string>
    <string name="title_section5">Setup</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="flbutton">Front Left</string>
    <string name="frbutton">Front Right</string>
    <string name="blbutton">Back Left</string>
    <string name="brbutton">Back Right</string>
    <string name="stop">Stop</string>
    <string name="sinusoid">Sinusoid</string>
    <string name="turn_signal">Turn Signal</string>
    <string name="sawtooth">Sawtooth</string>
    <string name="pulse">Pulse</string>

</resources>
