<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              style="?android:attr/buttonBarStyle"
              tools:context="com.sebastian.helmet.BluetoothFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:text="@string/flbutton"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="@string/frbutton"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:text="@string/blbutton"
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="@string/brbutton"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <SeekBar
        android:id="@+id/seek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            />

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:text="@string/pulse"
            android:id="@+id/pulse"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="@string/sawtooth"
            android:id="@+id/sawtooth"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="@string/turn_signal"
            android:id="@+id/turnsignal"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarStyle"
        >

        <Button
            android:text="@string/sinusoid"
            android:id="@+id/sin"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="Fast Pulse"
            android:id="@+id/stuff"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />

        <Button
            android:text="Default"
            android:id="@+id/stuff2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            android:enabled="false"
            style="?android:attr/buttonBarButtonStyle"
            />
    </LinearLayout>


</LinearLayout>
